hphp/hack/test/typecheck/fun_generics_bad.php.exp
File "fun_generics_bad.php", line 24, characters 36-41:
Invalid argument (Typing[4110])
File "fun_generics_bad.php", line 4, characters 29-31:
Expected int
File "fun_generics_bad.php", line 19, characters 18-21:
But got null
